# clever_searcher

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
clever_searcher/: __init__.py  agent.py  cli.py
clever_searcher/core/: __init__.py  deduper.py  fetcher.py  planner.py  scorer.py  searcher.py  simple_scorer.py  summarizer.py
clever_searcher/logging/: __init__.py  operation_logger.py  preference_collector.py
clever_searcher/output/: __init__.py  digest.py
clever_searcher/storage/: __init__.py  database.py  models.py
clever_searcher/utils/: __init__.py  config.py
