[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clever-searcher"
version = "0.1.0"
description = "Autonomous web discovery and digest agent"
authors = [{name = "User", email = "user@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "httpx>=0.25.0",
    "trafilatura>=1.6.0",
    "beautifulsoup4>=4.12.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "apscheduler>=3.10.0",
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.0.0",
    "playwright>=1.40.0",
    "feedparser>=6.0.0",
    "python-dateutil>=2.8.0",
    "markdownify>=0.11.0",
    "jinja2>=3.1.0",
    "duckduckgo-search>=3.9.0",
    "tavily-python>=0.3.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
clever-searcher = "clever_searcher.cli:main"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true